Add reference link to instructor.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,10 @@
   
         <h4>Requests to GET JSON</h4>
         <ol>
+          <li> <a href="http://localhost:3004/inst/findall">http://localhost:3004/inst/findall</a></li>
+          <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
+        </ol>
+        <ol>
           <li> <a href="http://localhost:8089/customer/findall">http://localhost:8089/customer/findall</a>
           </li>
           <li> <a href="http://localhost:8089/customer/findone/1">http://localhost:8089/customer/findone/1</a>
@@ -26,6 +30,13 @@
         </ol>
         <br>
         <h4>Requests to GET a view</h4>
+        <ol>
+          <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
+          <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
+          <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
+          <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
+          <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+        </ol>
         <ol>
           <li>
             <a href="http://localhost:8089/customer">http://localhost:8089/customer</a>
