--- a/views/instructor/index.ejs
+++ b/views/instructor/index.ejs
@@ -2,7 +2,29 @@
 <br>
 <div class="container-fluid">
   <div class="row">
-    <div class="col col-md-12">
+    <div class="col-md-6">
+        <h3>GET resources</h3>
+        <ol>
+            <li> <a href="http://localhost:3004/inst/findall">http://localhost:3004/inst/findall</a></li>
+            <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
+            <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
+            <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
+            <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
+            <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
+            <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+        </ol>
+    </div>
+    <div class="col-md-6">
+            <h3>POST resources</h3>
+            <ol>
+                <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
+                <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
+                <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
+                <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
+                <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+            </ol>
+        </div>
+    <div class="col-md-3">
       <a href="inst/create" class="btn btn-primary new">
         add a new instructor
       </a>
