--- a/views/header.ejs
+++ b/views/header.ejs
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/customer">Customers</a>
+            <a class="nav-link" href="/inst">Instructors</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/product">Products</a>
