Added views, edited controller

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,10 +17,9 @@
           <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
         </ol>
         <ol>
-          <li> <a href="http://localhost:8089/customer/findall">http://localhost:8089/customer/findall</a>
-          </li>
-          <li> <a href="http://localhost:8089/customer/findone/1">http://localhost:8089/customer/findone/1</a>
-          </li>
+          <li> <a href="http://localhost:8089/stu/findall">http://localhost:8089/stu/findall</a></li>
+          <li> <a href="http://localhost:8089/stu/findone/1">http://localhost:8089/stu/findone/1</a> </li>
+        </ol>
           <li> <a href="http://localhost:8089/customer/findone/91">http://localhost:8089/customer/findone/91</a>
           </li>
           <li> <a href="http://localhost:8089/customer/findone/92">http://localhost:8089/customer/findone/92</a>
@@ -38,10 +37,12 @@
           <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
         </ol>
         <ol>
-          <li>
-            <a href="http://localhost:8089/customer">http://localhost:8089/customer</a>
-          </li>
-          <li>
+          <li> <a href="http://localhost:3004/stu/">http://localhost:3004/stu/</a></li>
+          <li> <a href="http://localhost:3004/stu/create">http://localhost:3004/stu/create</a></li>
+          <li> <a href="http://localhost:3004/stu/details">http://localhost:3004/stu/details</a></li>
+          <li> <a href="http://localhost:3004/stu/edit">http://localhost:3004/stu/edit</a></li>
+          <li> <a href="http://localhost:3004/stu/delete">http://localhost:3004/stu/delete</a></li>
+        </ol>
             <a href="http://localhost:8089/customer/create">http://localhost:8089/customer/create</a>
           </li>
   
