--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,10 @@
           <li> <a href="http://localhost:8089/stu/findall">http://localhost:8089/stu/findall</a></li>
           <li> <a href="http://localhost:8089/stu/findone/1">http://localhost:8089/stu/findone/1</a> </li>
         </ol>
+        <ol>
+          <li> <a href="http://localhost:8089/sec/findall">http://localhost:8089/sec/findall</a></li>
+          <li> <a href="http://localhost:8089/sec/findone/1">http://localhost:8089/sec/findone/1</a> </li>
+        </ol>
           <li> <a href="http://localhost:8089/customer/findone/91">http://localhost:8089/customer/findone/91</a>
           </li>
           <li> <a href="http://localhost:8089/customer/findone/92">http://localhost:8089/customer/findone/92</a>
@@ -42,6 +46,13 @@
           <li> <a href="http://localhost:3004/stu/details">http://localhost:3004/stu/details</a></li>
           <li> <a href="http://localhost:3004/stu/edit">http://localhost:3004/stu/edit</a></li>
           <li> <a href="http://localhost:3004/stu/delete">http://localhost:3004/stu/delete</a></li>
+        </ol>
+        <ol>
+          <li> <a href="http://localhost:3004/sec/">http://localhost:3004/sec/</a></li>
+          <li> <a href="http://localhost:3004/sec/create">http://localhost:3004/sec/create</a></li>
+          <li> <a href="http://localhost:3004/sec/details">http://localhost:3004/sec/details</a></li>
+          <li> <a href="http://localhost:3004/sec/edit">http://localhost:3004/sec/edit</a></li>
+          <li> <a href="http://localhost:3004/sec/delete">http://localhost:3004/sec/delete</a></li>
         </ol>
             <a href="http://localhost:8089/customer/create">http://localhost:8089/customer/create</a>
           </li>
