Fixed index, and student.js

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -16,7 +16,7 @@
             <a class="nav-link" href="/inst">Instructors</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/product">Products</a>
+            <a class="nav-link" href="/stu">Students</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/order">Orders</a>
@@ -33,6 +33,7 @@
                 <a class="dropdown-item" href="/about/dev1">Group Member 1</a>
                 <a class="dropdown-item" href="/about/dev2">Group Member 2</a>
                 <a class="dropdown-item" href="/about/dev3">Group Member 3</a>
+                <a class="dropdown-item" href="/about/dev4">Group Member 4</a>
             </div>
           </li>
   
