--- a/views/section/index.ejs
+++ b/views/section/index.ejs
@@ -5,27 +5,27 @@
     <div class="col-md-6">
         <h3>GET resources</h3>
         <ol>
-            <li> <a href="http://localhost:3004/inst/findall">http://localhost:3004/inst/findall</a></li>
-            <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
-            <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
-            <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
-            <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
-            <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
-            <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+            <li> <a href="http://localhost:3004/sec/findall">http://localhost:3004/sec/findall</a></li>
+            <li> <a href="http://localhost:3004/sec/findone/1">http://localhost:3004/sec/findone/1</a></li>
+            <li> <a href="http://localhost:3004/sec/">http://localhost:3004/sec/</a></li>
+            <li> <a href="http://localhost:3004/sec/create">http://localhost:3004/sec/create</a></li>
+            <li> <a href="http://localhost:3004/sec/details">http://localhost:3004/sec/details</a></li>
+            <li> <a href="http://localhost:3004/sec/edit">http://localhost:3004/sec/edit</a></li>
+            <li> <a href="http://localhost:3004/sec/delete">http://localhost:3004/sec/delete</a></li>
         </ol>
     </div>
     <div class="col-md-6">
             <h3>POST resources</h3>
             <ol>
-                <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
-                <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
-                <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
-                <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
-                <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+                <li> <a href="http://localhost:3004/sec/">http://localhost:3004/sec/</a></li>
+                <li> <a href="http://localhost:3004/sec/create">http://localhost:3004/sec/create</a></li>
+                <li> <a href="http://localhost:3004/sec/details">http://localhost:3004/sec/details</a></li>
+                <li> <a href="http://localhost:3004/sec/edit">http://localhost:3004/sec/edit</a></li>
+                <li> <a href="http://localhost:3004/sec/delete">http://localhost:3004/sec/delete</a></li>
             </ol>
         </div>
     <div class="col-md-3">
-      <a href="inst/create" class="btn btn-primary new">
+      <a href="sec/create" class="btn btn-primary new">
         add a new instructor
       </a>
       
