--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,18 +17,22 @@
           <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
         </ol>
         <ol>
-          <li> <a href="http://localhost:8089/stu/findall">http://localhost:8089/stu/findall</a></li>
-          <li> <a href="http://localhost:8089/stu/findone/1">http://localhost:8089/stu/findone/1</a> </li>
+          <li> <a href="http://localhost:3004/stu/findall">http://localhost:3004/stu/findall</a></li>
+          <li> <a href="http://localhost:3004/stu/findone/1">http://localhost:3004/stu/findone/1</a> </li>
         </ol>
         <ol>
-          <li> <a href="http://localhost:8089/sec/findall">http://localhost:8089/sec/findall</a></li>
-          <li> <a href="http://localhost:8089/sec/findone/1">http://localhost:8089/sec/findone/1</a> </li>
+          <li> <a href="http://localhost:3004/sec/findall">http://localhost:3004/sec/findall</a></li>
+          <li> <a href="http://localhost:3004/sec/findone/1">http://localhost:3004/sec/findone/1</a> </li>
         </ol>
-          <li> <a href="http://localhost:8089/customer/findone/91">http://localhost:8089/customer/findone/91</a>
+        <ol>
+          <li> <a href="http://localhost:3004/cour/findall">http://localhost:3004/cour/findall</a></li>
+          <li> <a href="http://localhost:3004/cour/findone/1">http://localhost:3004/cour/findone/1</a> </li>
+        </ol>
+          <li> <a href="http://localhost:3004/customer/findone/91">http://localhost:3004/customer/findone/91</a>
           </li>
-          <li> <a href="http://localhost:8089/customer/findone/92">http://localhost:8089/customer/findone/92</a>
+          <li> <a href="http://localhost:3004/customer/findone/92">http://localhost:3004/customer/findone/92</a>
           </li>
-          <li> <a href="http://localhost:8089/customer/findone/93">http://localhost:8089/customer/findone/93</a>
+          <li> <a href="http://localhost:3004/customer/findone/93">http://localhost:3004/customer/findone/93</a>
           </li>
         </ol>
         <br>
@@ -54,37 +58,44 @@
           <li> <a href="http://localhost:3004/sec/edit">http://localhost:3004/sec/edit</a></li>
           <li> <a href="http://localhost:3004/sec/delete">http://localhost:3004/sec/delete</a></li>
         </ol>
-            <a href="http://localhost:8089/customer/create">http://localhost:8089/customer/create</a>
+        <ol>
+          <li> <a href="http://localhost:3004/cour/">http://localhost:3004/cour/</a></li>
+          <li> <a href="http://localhost:3004/cour/create">http://localhost:3004/cour/create</a></li>
+          <li> <a href="http://localhost:3004/cour/details">http://localhost:3004/cour/details</a></li>
+          <li> <a href="http://localhost:3004/cour/edit">http://localhost:3004/cour/edit</a></li>
+          <li> <a href="http://localhost:3004/cour/delete">http://localhost:3004/cour/delete</a></li>
+        </ol>
+            <a href="http://localhost:3004/customer/create">http://localhost:3004/customer/create</a>
           </li>
   
           <li>
-            <a href="http://localhost:8089/customer/edit/91">http://localhost:8089/customer/edit/91</a>
+            <a href="http://localhost:3004/customer/edit/91">http://localhost:3004/customer/edit/91</a>
           </li>
           <li>
-            <a href="http://localhost:8089/customer/edit/92">http://localhost:8089/customer/edit/92</a>
+            <a href="http://localhost:3004/customer/edit/92">http://localhost:3004/customer/edit/92</a>
           </li>
           <li>
-            <a href="http://localhost:8089/customer/edit/93">http://localhost:8089/customer/edit/93</a>
-          </li>
-  
-          <li>
-            <a href="http://localhost:8089/customer/delete/91">http://localhost:8089/customer/delete/91</a>
-          </li>
-          <li>
-            <a href="http://localhost:8089/customer/delete/92">http://localhost:8089/customer/delete/92</a>
-          </li>
-          <li>
-            <a href="http://localhost:8089/customer/delete/93">http://localhost:8089/customer/delete/93</a>
+            <a href="http://localhost:3004/customer/edit/93">http://localhost:3004/customer/edit/93</a>
           </li>
   
           <li>
-            <a href="http://localhost:8089/customer/details/91">http://localhost:8089/customer/details/91</a>
+            <a href="http://localhost:3004/customer/delete/91">http://localhost:3004/customer/delete/91</a>
           </li>
           <li>
-            <a href="http://localhost:8089/customer/details/92">http://localhost:8089/customer/details/92</a>
+            <a href="http://localhost:3004/customer/delete/92">http://localhost:3004/customer/delete/92</a>
           </li>
           <li>
-            <a href="http://localhost:8089/customer/details/93">http://localhost:8089/customer/details/93</a>
+            <a href="http://localhost:3004/customer/delete/93">http://localhost:3004/customer/delete/93</a>
+          </li>
+  
+          <li>
+            <a href="http://localhost:3004/customer/details/91">http://localhost:3004/customer/details/91</a>
+          </li>
+          <li>
+            <a href="http://localhost:3004/customer/details/92">http://localhost:3004/customer/details/92</a>
+          </li>
+          <li>
+            <a href="http://localhost:3004/customer/details/93">http://localhost:3004/customer/details/93</a>
           </li>
   
         </ol>
