updated nav bar

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,10 +19,10 @@
             <a class="nav-link" href="/stu">Students</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/order">Orders</a>
+            <a class="nav-link" href="/sec">Sections</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/orderlineitem">Lines</a>
+            <a class="nav-link" href="/cour">Courses</a>
           </li>
   
           <!-- view-source:https://fezvrasta.github.io/bootstrap-material-design/docs/4.0/examples/navbars/ -->
