Modify index.ejs to show resource name above urls

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,31 +12,30 @@
         <br>
   
         <h4>Requests to GET JSON</h4>
+        Instructor
         <ol>
+          
           <li> <a href="http://localhost:3004/inst/findall">http://localhost:3004/inst/findall</a></li>
           <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
         </ol>
+        Student
         <ol>
           <li> <a href="http://localhost:3004/stu/findall">http://localhost:3004/stu/findall</a></li>
           <li> <a href="http://localhost:3004/stu/findone/1">http://localhost:3004/stu/findone/1</a> </li>
         </ol>
+        Section
         <ol>
           <li> <a href="http://localhost:3004/sec/findall">http://localhost:3004/sec/findall</a></li>
           <li> <a href="http://localhost:3004/sec/findone/1">http://localhost:3004/sec/findone/1</a> </li>
         </ol>
+        Course
         <ol>
           <li> <a href="http://localhost:3004/cour/findall">http://localhost:3004/cour/findall</a></li>
           <li> <a href="http://localhost:3004/cour/findone/1">http://localhost:3004/cour/findone/1</a> </li>
         </ol>
-          <li> <a href="http://localhost:3004/customer/findone/91">http://localhost:3004/customer/findone/91</a>
-          </li>
-          <li> <a href="http://localhost:3004/customer/findone/92">http://localhost:3004/customer/findone/92</a>
-          </li>
-          <li> <a href="http://localhost:3004/customer/findone/93">http://localhost:3004/customer/findone/93</a>
-          </li>
-        </ol>
         <br>
         <h4>Requests to GET a view</h4>
+        Instructor
         <ol>
           <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
           <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
@@ -44,6 +43,7 @@
           <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
           <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
         </ol>
+        Student
         <ol>
           <li> <a href="http://localhost:3004/stu/">http://localhost:3004/stu/</a></li>
           <li> <a href="http://localhost:3004/stu/create">http://localhost:3004/stu/create</a></li>
@@ -51,6 +51,7 @@
           <li> <a href="http://localhost:3004/stu/edit">http://localhost:3004/stu/edit</a></li>
           <li> <a href="http://localhost:3004/stu/delete">http://localhost:3004/stu/delete</a></li>
         </ol>
+        Section
         <ol>
           <li> <a href="http://localhost:3004/sec/">http://localhost:3004/sec/</a></li>
           <li> <a href="http://localhost:3004/sec/create">http://localhost:3004/sec/create</a></li>
@@ -58,6 +59,7 @@
           <li> <a href="http://localhost:3004/sec/edit">http://localhost:3004/sec/edit</a></li>
           <li> <a href="http://localhost:3004/sec/delete">http://localhost:3004/sec/delete</a></li>
         </ol>
+        Course
         <ol>
           <li> <a href="http://localhost:3004/cour/">http://localhost:3004/cour/</a></li>
           <li> <a href="http://localhost:3004/cour/create">http://localhost:3004/cour/create</a></li>
@@ -65,6 +67,7 @@
           <li> <a href="http://localhost:3004/cour/edit">http://localhost:3004/cour/edit</a></li>
           <li> <a href="http://localhost:3004/cour/delete">http://localhost:3004/cour/delete</a></li>
         </ol>
+        
             <a href="http://localhost:3004/customer/create">http://localhost:3004/customer/create</a>
           </li>
   
