Show data for instructors on the index page

--- a/views/instructor/index.ejs
+++ b/views/instructor/index.ejs
@@ -9,9 +9,9 @@
             <li> <a href="http://localhost:3004/inst/findone/1">http://localhost:3004/inst/findone/1</a></li>
             <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
             <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
-            <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
-            <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
-            <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+            <li> <a href="http://localhost:3004/inst/details/1">http://localhost:3004/inst/details/1</a></li>
+            <li> <a href="http://localhost:3004/inst/edit/1">http://localhost:3004/inst/edit/1</a></li>
+            <li> <a href="http://localhost:3004/inst/delete/1">http://localhost:3004/inst/delete/1</a></li>
         </ol>
     </div>
     <div class="col-md-6">
@@ -19,17 +19,17 @@
             <ol>
                 <li> <a href="http://localhost:3004/inst/">http://localhost:3004/inst/</a></li>
                 <li> <a href="http://localhost:3004/inst/create">http://localhost:3004/inst/create</a></li>
-                <li> <a href="http://localhost:3004/inst/details">http://localhost:3004/inst/details</a></li>
-                <li> <a href="http://localhost:3004/inst/edit">http://localhost:3004/inst/edit</a></li>
-                <li> <a href="http://localhost:3004/inst/delete">http://localhost:3004/inst/delete</a></li>
+                <li> <a href="http://localhost:3004/inst/details/1">http://localhost:3004/inst/details/1</a></li>
+                <li> <a href="http://localhost:3004/inst/edit/1">http://localhost:3004/inst/edit/1</a></li>
+                <li> <a href="http://localhost:3004/inst/delete/1">http://localhost:3004/inst/delete/1</a></li>
             </ol>
         </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
       <a href="inst/create" class="btn btn-primary new">
         add a new instructor
       </a>
       
-      <!-- <h2>Recent entries</h2>
+      <h2>Recent entries</h2>
       <p>There are
         <%= instructors.length %> instructors.
         <br>
@@ -55,7 +55,7 @@
           <hr>
         </div>
       </div>
-      <% } %> -->
+      <% } %>
 
     </div>
   </div>
