--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,8 +12,11 @@ main {
   /* expand vertically without hiding any */
  flex: 1 1 0;
  padding: 60px 15px 0;
- max-width: 700px;
  margin-right: auto;
  margin-left: auto;
+ min-width: 400px;
 }
 
+div {
+  text-align: center;
+}
