--- a/views/instructor/delete.ejs
+++ b/views/instructor/delete.ejs
@@ -4,26 +4,21 @@
   <div class=row>
     <div class="col col-md-12">
 
-      <h2>Confirm deletion of customer</h2>
+      <h2>Confirm deletion of instructor</h2>
       <br>
-      <br> ID: <%=  customer._id %>
-      <br> Email: <%=customer.email%>
-      <br> Given: <%=customer.given%>
-      <br> Family: <%=customer.family%>
-      <br> Street 1: <%=customer.street1%>
-      <br> Street 2: <%=customer.street2 %>
-      <br> City: <%=customer.city %>
-      <br> State: <%=customer.state %>
-      <br> Zip: <%=customer.zip %>
-      <br> Country: <%=customer.country %>
+      <br> ID: <%=  instructor._id %>
+      <br> Given Name: <%=instructor.given%>
+      <br> Last Name: <%=instructor.family%>
+      <br> email: <%=instructor.email%>
+      <br> salary: <%=instructor.salary%>
+      <br> github: <%=instructor.github%>
       <hr>
       
-      <form method="get" action="/customer">
+      <form method="get" action="/inst">
         <input type="submit" value="Return to list" class="btn btn-caution" />
       </form>
 
-
-      <form method="POST" action="/customer/delete/<%= customer._id %>">
+      <form method="POST" action="/inst/delete/<%= instructor._id %>">
         <input type="submit" value="Delete this item" class="btn btn-danger pull-right" />
       </form>
 
