--- a/views/student/create.ejs
+++ b/views/student/create.ejs
@@ -34,7 +34,7 @@
             </div>
           </form>
 
-          <form method="get" action="/customer">
+          <form method="get" action="/student">
             <input type="submit" value="Return to list" class="btn btn-caution" />
           </form>
 
