added stuff to course ejs files

--- a/views/course/index.ejs
+++ b/views/course/index.ejs
@@ -9,9 +9,9 @@
             <li> <a href="http://localhost:3004/cour/findone/1">http://localhost:3004/cour/findone/1</a></li>
             <li> <a href="http://localhost:3004/cour/">http://localhost:3004/cour/</a></li>
             <li> <a href="http://localhost:3004/cour/create">http://localhost:3004/cour/create</a></li>
-            <li> <a href="http://localhost:3004/cour/details">http://localhost:3004/cour/details</a></li>
-            <li> <a href="http://localhost:3004/cour/edit">http://localhost:3004/cour/edit</a></li>
-            <li> <a href="http://localhost:3004/cour/delete">http://localhost:3004/cour/delete</a></li>
+            <li> <a href="http://localhost:3004/cour/details/1">http://localhost:3004/cour/details/1</a></li>
+            <li> <a href="http://localhost:3004/cour/edit/1">http://localhost:3004/cour/edit/1</a></li>
+            <li> <a href="http://localhost:3004/cour/delete/1">http://localhost:3004/cour/delete/1</a></li>
         </ol>
     </div>
     <div class="col-md-6">
@@ -19,12 +19,12 @@
             <ol>
                 <li> <a href="http://localhost:3004/cour/">http://localhost:3004/cour/</a></li>
                 <li> <a href="http://localhost:3004/cour/create">http://localhost:3004/cour/create</a></li>
-                <li> <a href="http://localhost:3004/cour/details">http://localhost:3004/cour/details</a></li>
-                <li> <a href="http://localhost:3004/cour/edit">http://localhost:3004/cour/edit</a></li>
-                <li> <a href="http://localhost:3004/cour/delete">http://localhost:3004/cour/delete</a></li>
+                <li> <a href="http://localhost:3004/cour/details/1">http://localhost:3004/cour/details/1</a></li>
+                <li> <a href="http://localhost:3004/cour/edit/1">http://localhost:3004/cour/edit/1</a></li>
+                <li> <a href="http://localhost:3004/cour/delete/1">http://localhost:3004/cour/delete/1</a></li>
             </ol>
         </div>
-    <div class="col-md-3">
+    <div class="col-md-6">
       <a href="cour/create" class="btn btn-primary new">
         add a new course
       </a>
