Fixed course views

--- a/views/course/delete.ejs
+++ b/views/course/delete.ejs
@@ -7,11 +7,12 @@
       <h2>Confirm deletion of Course</h2>
       <br>
       <br> ID: <%=course._id %>
-      <br> Given Name: <%=course.given%>
-      <br> Last Name: <%=course.family%>
-      <br> email: <%=course.email%>
-      <br> salary: <%=course.salary%>
-      <br> github: <%=course.github%>
+      <br> School Number: <%=course.SchoolNumber%>
+      <br> Course Number: <%=course.CourseNumber%>
+      <br> Course Name: <%=course.Name%>
+      <br> In Spring?: <%=course.inSpring%>
+      <br> In Summer?: <%=course.inSummer%>
+      <br> In Fall?: <%=course.inFall%>
       <hr>
       
       <form method="get" action="/cour">
