Change footer to link to correct repo

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -4,7 +4,6 @@
 </br>
 <footer class="footer">
   <div class="container">
-    <p>&copy; 2017-2019</p>
-    <p class="text-muted"><a href="https://bitbucket.org/professorcase/node-express-mvc-ejs-start">Repository</a></p>
+    <p class="text-muted"><a href="https://github.com/JosephCW/mvc-app">Repository</a></p>
   </div>
 </footer>
