Add link to developers about me

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,14 @@
         <br>
         <br>
         <h1>Home page</h1>
+        <h3>About The Developers</h3>
+        <ul>
+          <li><a href="http://josephwatts.me/about-me/">Joseph Watts</a></li>
+          <li><a href="https://cweltonsmith.github.io/about-me/">Chase Smith</a></li>
+        </ul>
         <br>
-        <h3>Watch the address bar.</h3>
-        <p>Create GET requests using the address bar.</p>
         <hr>
-        <h3>During development, test your api here. </h3>
         <br>
-  
         <h4>Requests to GET JSON</h4>
         Instructor
         <ol>
