Added about me to homepage

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
         <ul>
           <li><a href="http://josephwatts.me/about-me/">Joseph Watts</a></li>
           <li><a href="https://cweltonsmith.github.io/about-me/">Chase Smith</a></li>
+          <li><a href="https://khart0012.github.io/about-me/">Kevin Hart</a></li>
           <li><a href="https://connorbeshears.github.io/about-me-20/">Connor Beshears</a></li>
         </ul>
         <br>
