Tried adding a way to list the courses

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,12 @@
           <li><a href="https://connorbeshears.github.io/about-me-20/">Connor Beshears</a></li>
         </ul>
         <br>
+        <div class="col col-md-12">
+          <select id="course-list" name="course-list">
+          </select>
+        </div>
+
+        <br>
         <hr>
         <br>
         <h4>Requests to GET JSON</h4>
